# legislation-monitor

./: .gitignore  INFO.txt  INFO_AND_TODO.txt  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 39c80f3684ae_rename_parser_class_to_parser_name.py  7fbc544fc119_add_document_type.py  ab8a7a962bc2_add_documents_table.py  af4302c2ff59_initial_tables.py  bf48305cd6ba_add_source_keyword_category_tables.py  d60e449e2b8f_add_document_categories.py
app/: main.py
app/api/: document_router.py  monitor_router.py  parser_router.py  process_router.py  source_router.py
app/config/: categories.py  importance_rules.py
app/core/: config.py  http_client.py  logger.py
app/db/: base.py  init_db.py  seed.py  session.py
app/models/: base_model.py  category.py  document.py  document_category.py  keyword.py  role.py  source.py  user.py
app/monitoring/: monitor.py  parser_manager.py
app/parsers/: __init__.py  base.py  diam.py  kmu.py  minregion.py  president.py  rada.py
app/repositories/: base.py  category_repository.py  document_repository.py  source_repository.py
app/schemas/: document_dto.py  processed_document_dto.py
app/services/: category_db_service.py  category_service.py  content_extractor.py  document_analyzer.py  document_processor.py  document_service.py  importance_service.py  monitoring_service.py  rss_service.py  source_service.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html  documents.html  sources.html
